rc-migrator: use before and after asset transactors
Before the migration, RC tracks DOT teleports in its checking account
in order to track total supply.

After the migration, RC no longer tracks teleports, AH will do it.

During the migration teleporting DOT out of the RC will be disabled.

Signed-off-by: Adrian Catangiu <adrian@parity.io>

--- a/pallets/rc-migrator/Cargo.toml
+++ b/pallets/rc-migrator/Cargo.toml
@@ -40,6 +40,8 @@ runtime-parachains = { workspace = true }
 polkadot-parachain-primitives = { workspace = true }
 hex-literal = { workspace = true }
 xcm = { workspace = true }
+xcm-builder = { workspace = true }
+xcm-executor = { workspace = true }
 sp-staking = { workspace = true }
 
 [features]
