temporarily disable Encointer
Re-Enable once encointer pallets and primitives based on 2507 are published

--- a/chain-spec-generator/Cargo.toml
+++ b/chain-spec-generator/Cargo.toml
@@ -22,7 +22,7 @@ asset-hub-kusama-runtime = { workspace = true, optional = true }
 collectives-polkadot-runtime = { workspace = true, optional = true }
 bridge-hub-polkadot-runtime = { workspace = true, optional = true }
 bridge-hub-kusama-runtime = { workspace = true, optional = true }
-encointer-kusama-runtime = { workspace = true, optional = true }
+#encointer-kusama-runtime = { workspace = true, optional = true }
 glutton-kusama-runtime = { workspace = true, optional = true }
 coretime-kusama-runtime = { workspace = true, optional = true }
 coretime-polkadot-runtime = { workspace = true, optional = true }
@@ -40,7 +40,7 @@ runtime-benchmarks = [
 	"collectives-polkadot-runtime?/runtime-benchmarks",
 	"coretime-kusama-runtime?/runtime-benchmarks",
 	"coretime-polkadot-runtime?/runtime-benchmarks",
-	"encointer-kusama-runtime?/runtime-benchmarks",
+#	"encointer-kusama-runtime?/runtime-benchmarks",
 	"glutton-kusama-runtime?/runtime-benchmarks",
 	"kusama-runtime?/runtime-benchmarks",
 	"people-kusama-runtime?/runtime-benchmarks",
@@ -56,7 +56,7 @@ on-chain-release-build = [
 	"collectives-polkadot-runtime?/on-chain-release-build",
 	"coretime-kusama-runtime?/on-chain-release-build",
 	"coretime-polkadot-runtime?/on-chain-release-build",
-	"encointer-kusama-runtime?/on-chain-release-build",
+#	"encointer-kusama-runtime?/on-chain-release-build",
 	"glutton-kusama-runtime?/on-chain-release-build",
 	"kusama-runtime?/on-chain-release-build",
 	"people-kusama-runtime?/on-chain-release-build",
@@ -71,7 +71,7 @@ asset-hub-kusama = ["asset-hub-kusama-runtime"]
 collectives-polkadot = ["collectives-polkadot-runtime"]
 bridge-hub-polkadot = ["bridge-hub-polkadot-runtime"]
 bridge-hub-kusama = ["bridge-hub-kusama-runtime"]
-encointer-kusama = ["encointer-kusama-runtime"]
+#encointer-kusama = ["encointer-kusama-runtime"]
 glutton-kusama = ["glutton-kusama-runtime"]
 coretime-kusama = ["coretime-kusama-runtime"]
 coretime-polkadot = ["coretime-polkadot-runtime"]
@@ -90,7 +90,7 @@ all-kusama = [
 	"asset-hub-kusama",
 	"bridge-hub-kusama",
 	"coretime-kusama",
-	"encointer-kusama",
+#	"encointer-kusama",
 	"glutton-kusama",
 	"kusama",
 	"people-kusama",
